개선된 요청하기 페이지 및 페이지 라우팅 개발 필요 : feat : svg 파일 아이콘으로 변환, 불필요한 svg 파일 삭제, ContextMenuItem 구조 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/414

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -372,7 +372,7 @@
     },
     {
       "uid": "bca15f5fb27c34352a93e908f4bbb6fd",
-      "css": "exchange",
+      "css": "change",
       "code": 59421,
       "src": "custom_icons",
       "selected": true,
@@ -400,7 +400,7 @@
     },
     {
       "uid": "e4de2130716716c9dbd72ad99080666c",
-      "css": "bell",
+      "css": "alert",
       "code": 59422,
       "src": "custom_icons",
       "selected": true,
@@ -414,7 +414,7 @@
     },
     {
       "uid": "ef51868ac4e47828dca719cbf481fdf9",
-      "css": "bellOff",
+      "css": "alertOff",
       "code": 59423,
       "src": "custom_icons",
       "selected": true,
@@ -428,7 +428,7 @@
     },
     {
       "uid": "1d8cef611c5c022e5bb6f70a682da9fc",
-      "css": "exit",
+      "css": "chatOut",
       "code": 59400,
       "src": "custom_icons",
       "selected": true,
@@ -442,7 +442,7 @@
     },
     {
       "uid": "54631df3ad785aa0bdce3124e0e71102",
-      "css": "flag",
+      "css": "report",
       "code": 59401,
       "src": "custom_icons",
       "selected": true,
@@ -456,7 +456,7 @@
     },
     {
       "uid": "07a960719bb14e0bf2c54103cf100d0a",
-      "css": "image",
+      "css": "chatImage",
       "code": 59402,
       "src": "custom_icons",
       "selected": true,
@@ -470,7 +470,7 @@
     },
     {
       "uid": "dbd8c8e0f21e456335f32d7d9464f452",
-      "css": "trashCan",
+      "css": "trash",
       "code": 59406,
       "src": "custom_icons",
       "selected": true,
@@ -480,6 +480,20 @@
       },
       "search": [
         "trashcan"
+      ]
+    },
+    {
+      "uid": "48959e654d1c987a0e44073c80734d64",
+      "css": "itmeRegisterImage",
+      "code": 59407,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M659.3 177.5C749.1 177.5 821.9 250.4 821.9 340.2 821.9 430.1 749.1 502.9 659.3 502.9 569.4 502.9 496.6 430.1 496.6 340.2 496.6 250.4 569.4 177.5 659.3 177.5ZM659.3 254.4C612 254.5 573.6 292.8 573.5 340.2 573.5 387.6 612 426 659.3 426 706.6 426 745 387.6 745 340.2 745 292.8 706.6 254.5 659.3 254.4ZM890.5 0C951 0 1000 49.1 1000 109.5V890.5C1000 950.9 951 1000 890.5 1000H110.1C49.6 1000 0.6 950.9 0.6 890.5V552.6C-0.3 547.9-0.1 543.3 0.6 538.8V109.5C0.6 49.1 49.6 0 110.1 0H890.5ZM144.7 574C122.3 573.9 99.8 575.4 77.6 578.2V890.5C77.6 908.5 92.2 923.1 110.1 923.1H621.2C593.8 828.6 538.2 744.3 461.3 681.9 377.8 614.2 274.3 576.3 167.2 573.9H145.8C145.4 574 145 574 144.7 574ZM783.4 716C727.8 715.9 672.6 724.7 619.9 742 657.3 796.8 684.7 858 700.8 923.1H890.5C908.5 923.1 923.1 908.5 923.1 890.5V735.3C877.7 722.5 830.7 716 783.4 716ZM110.1 76.9C92.2 76.9 77.6 91.5 77.6 109.5V500.9C99.6 498.4 121.8 497.1 144 497.1 276.9 494.1 406.5 538.4 509.8 622.2 531.1 639.5 551 658.3 569.4 678.3 637.7 652.3 710.3 638.9 783.5 639.1L783.5 639.1C830.6 639.1 877.4 644.7 923.1 655.8V109.5C923.1 91.5 908.5 76.9 890.5 76.9H110.1Z",
+        "width": 1000
+      },
+      "search": [
+        "itmeregisterimage"
       ]
     },
     {
