코드 포매팅 통일 필요 : feat : code formatting 체크 워크플로우 추가 , dart-line-length 120으로 통일 https://github.com/TEAM-ROMROM/RomRom-FE/issues/465

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "cmake.sourceDirectory": "/Users/cassiiopeia/Desktop/Programming/Java/RomRom-FE/linux"
+    "cmake.sourceDirectory": "/Users/cassiiopeia/Desktop/Programming/Java/RomRom-FE/linux",
+    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+    "editor.formatOnSave": true,
+    "dart.lineLength": 120,
+    "[dart]": {
+        "editor.defaultFormatter": "Dart-Code.dart-code"
+    },
+    "search.exclude": {
+        "**/.fvm": true
+    },
+    "files.watcherExclude": {
+        "**/.fvm": true
+    }
 }
