Common Toast 디자인 변경 및 다중 토스트 알림시 겹침문제 개선 필요 : feat : 자동 ci 포매팅 로직 추가 및 lefthook 커밋시 포매팅 처리 로직 삭제 https://github.com/TEAM-ROMROM/RomRom-FE/issues/469

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,9 @@
 # lefthook - Git Hook 관리 도구
 # 설치: brew install lefthook (macOS) / scoop install lefthook (Windows) / npm install -g lefthook
 # 활성화: lefthook install
+#
+# 참고: flutter analyze는 GitHub Actions에서 PR 시 자동 실행됨
+# 로컬에서는 커밋 시 포맷 체크만 수행
 
 pre-commit:
   parallel: true
@@ -8,8 +11,3 @@ pre-commit:
     format-check:
       glob: "*.dart"
       run: dart format --line-length=120 --set-exit-if-changed {staged_files}
-
-pre-push:
-  commands:
-    analyze:
-      run: flutter analyze
