Patrol 기반 플로우 자동화 테스트 구축 및 테스트 필요 : feat : 단위 테스트 코드 및 자동 로그인 코드 추가, 개발환경에서 테스트 필요 https://github.com/TEAM-ROMROM/RomRom-FE/issues/484

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,9 @@ android {
             KAKAO_NATIVE_APP_KEY : dotenv['KAKAO_NATIVE_APP_KEY'] ?: ""
         ]
         multiDexEnabled true
+        // Patrol E2E 테스트용 설정
+        testInstrumentationRunner "pl.leancode.patrol.PatrolJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: "true"
     }
     signingConfigs {
         release {
@@ -107,4 +110,6 @@ dependencies {
     // Required for core library desugaring (e.g., flutter_local_notifications)
     // Use 2.1.4 or above as required by newer dependencies
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
+    // Patrol E2E 테스트용 의존성 (pubspec.yaml과 버전 동일하게 고정)
+    androidTestImplementation "pl.leancode.patrol:patrol:4.1.0"
 }
