--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  patrol: ^4.1.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+
+# Patrol E2E 테스트 설정
+patrol:
+  app_name: 롬롬
+  test_directory: integration_test
+  android:
+    package_name: com.alom.romrom
+  ios:
+    bundle_id: com.alom.romrom
 flutter:
   uses-material-design: true
   assets:
