Patrol 기반 플로우 자동화 테스트 구축 및 테스트 필요 : feat : patorl 테스트 로직 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/484

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ windows/flutter/generated_plugins.cmake
 # ====================================================================
 /.report
 /.run/
+
+# ====================================================================
+# Patrol E2E 테스트 관련
+# ====================================================================
+# 테스트 계정 정보 (민감 정보)
+integration_test/helpers/test_credentials.dart
