--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,13 @@ target 'Runner' do
   end
 end
 
+target 'RunnerUITests' do
+  use_frameworks!
+  use_modular_headers!
+
+  pod 'patrol', :path => '.symlinks/plugins/patrol/darwin'
+end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
