Git Worktree 경로에 한글(non-ASCII) 포함 시 Windows Android 빌드 실패 : feat 허용하도록 수정  https://github.com/TEAM-ROMROM/RomRom-FE/issues/507

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,4 +9,6 @@ systemProp.http.keepAlive=false
 systemProp.https.keepAlive=false
 org.gradle.jvmargs=-Xmx4096m
 # 빌드 캐시 활성화
-org.gradle.caching=true 
+org.gradle.caching=true
+# Worktree 경로에 한글(non-ASCII) 포함 시 빌드 실패 방지
+android.overridePathCheck=true 
