`gradle.properties`의 `android.overridePathCheck` 값에 후행 공백으로 인한 빌드 실패 : feat : android.overridePathCheck 후행 공백 제거 https://github.com/TEAM-ROMROM/RomRom-FE/issues/510

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ windows/flutter/generated_plugins.cmake
 # ====================================================================
 /.report
 /.run/
+/.issue/
 
 # ====================================================================
 # Patrol E2E 테스트 관련
