Android 테스트 APK 빌드 시 Fastlane 설치 실패 (gem 충돌) : feat : --force 추가 https://github.com/Cassiiopeia/SUH-DEVOPS-TEMPLATE/issues/197

--- a/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
@@ -581,7 +581,7 @@ jobs:
       # Install and setup Fastlane
       - name: Install Fastlane and create Fastfile
         run: |
-          gem install fastlane
+          gem install fastlane --force
           cd ios
           mkdir -p fastlane
           cat > fastlane/Fastfile << 'EOF'
