--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,19 +10,20 @@ dependencies:
   # 알파벳 순으로 정렬
   animated_toggle_switch: ^0.8.5
   cupertino_icons: ^1.0.6
+  firebase_auth: ^6.1.4
   firebase_core: ^4.2.1
   firebase_messaging: ^16.0.4
-  flutter_dotenv: ^5.2.1
-  flutter_lints: ^3.0.0
-  flutter_local_notifications: ^19.5.0
+  flutter_dotenv: ^6.0.0
+  flutter_lints: ^6.0.0
+  flutter_local_notifications: ^20.1.0
   flutter_naver_map: ^1.3.1
   flutter_riverpod: ^2.6.1
   flutter_screenutil: ^5.9.3
-  flutter_secure_storage: ^9.2.4
+  flutter_secure_storage: ^10.0.0
   flutter_svg: ^2.0.17
-  geolocator: ^13.0.2
-  geocoding: ^3.0.0
-  google_sign_in: ^6.2.2
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  google_sign_in: ^7.2.0
   gradient_borders: ^1.0.1
   http: ^1.3.0
   http_parser: ^4.0.2
@@ -31,14 +32,14 @@ dependencies:
   json_annotation: ^4.9.0
   kakao_flutter_sdk: ^1.9.7+3
   logging: ^1.3.0
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
   photo_viewer: ^0.1.0
   playing_cards_layouts: ^1.0.1
   provider: ^6.1.5
   shadex: ^1.0.2
   shared_preferences: ^2.5.2
   skeletonizer: ^2.1.0+1
-  stomp_dart_client: ^2.0.0
+  stomp_dart_client: ^3.0.1
   cached_network_image: ^3.4.1
 dev_dependencies:
   flutter_test:
