--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.5.2
   skeletonizer: ^2.1.0+1
   stomp_dart_client: ^3.0.1
+  url_launcher: ^6.3.2
   cached_network_image: ^3.4.1
 dev_dependencies:
   flutter_test:
